--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
             "cmdk": "^1.1.1",
+            "d3-geo": "^3.1.1",
             "embla-carousel-autoplay": "*",
             "embla-carousel-react": "^8.6.0",
             "firebase": "^12.6.0",
@@ -47,9 +48,11 @@
             "react-intersection-observer": "^10.0.0",
             "react-resizable-panels": "^2.1.7",
             "react-responsive-masonry": "*",
+            "react-simple-maps": "^3.0.0",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
+            "topojson-client": "^3.1.0",
             "vaul": "^1.1.2"
       },
       "devDependencies": {
